2002-10-27  Kim F. Storm  <storm@cua.dk>

	* pcvs.el (cvs-checkout): Use read-directory-name.
	(cvs-query-directory): Likewise.

2002-10-25  Stefan Monnier  <monnier@cs.yale.edu>

	* textmodes/outline.el (outline-next-heading): Make sure the match-data
	is really correct where returning.

2002-10-24  Juanma Barranquero  <lektu@terra.es>

	* textmodes/outline.el (outline-minor-mode): Add customization group.
	Patch from Matthew Swift <swift@alum.mit.edu>.

2002-10-23  Francis J. Wright  <F.J.Wright@qmul.ac.uk>

	* woman.el: Updated user interface generally, especially Cygwin
	compatibility.  Added some support for long groff names of the
	form [xxx].  Added preprocessor detection and preliminary support
	for tables using tbl/.TS/.TE.

2002-10-23  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-restrict-to-matches): New command.
	(ido-define-mode-map): Bind it to C-SPC and C-@ in ido-mode-map.

2002-10-22  Bob Halley  <halley@play-bow.org>  (tiny change)

	* eshell/esh-io.el (eshell-set-output-handle): Fix so that
	multiple redirection can work.

2002-10-21  Stefan Monnier  <monnier@cs.yale.edu>

	* ielm.el (inferior-emacs-lisp-mode): If hexl not found, use cat.
	Don't hardcode point-min == 1.

	* hexl.el (hexl-mode-old-write-contents-hooks): Remove.
	(hexl-mode, hexl-current-address, hexl-address-to-marker)
	(hexl-insert-char): Don't hardcode point-min == 1.
	(hexl-isearch-search-function): New fun.
	(hexl-mode-old-isearch-search-fun-function): New var.
	(hexl-mode): Use them.
	(hexl-mode, hexl-mode-exit, hexl-maybe-dehexlify-buffer):
	Use write-contents-functions rather then write-contents-hooks.

	* textmodes/text-mode.el (text-mode-syntax-table): Make ' a prefix.
	(paragraph-indent-text-mode-abbrev-table)
	(paragraph-indent-text-mode-syntax-table): Remove.
	(paragraph-indent-text-mode): Use the :abbrev and :syntax-table args.

2002-10-21  Juanma Barranquero  <lektu@terra.es>

	* eshell/esh-util.el (directory-files-and-attributes): Copy docstring